# pycombinator

./: .gitignore  README.md  _config.yml  _toc.yml  main.py  pyproject.toml
docs/: api.rst  lambda-talk.ipynb
src/pycombinator/: __init__.py  birds.py  boolean.py  utils.py
tests/: test_birds.py
