[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "pycombinator"
version = "0.0.1"
description = "Library for learning about lambda calculus and comminatory logic"
authors = [{name = "Henrik Finsberg", email = "henriknf@simula.no"}]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pdbpp",
    "ipython",
    "bump2version",
    "pre-commit",
]
docs = [
   "jupyter-book",
]
all = [
   "pycombinator[test]",
   "pycombinator[docs]",
   "pycombinator[dev]"
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
addopts = [
   "--cov=pycombinator",
   "--cov-report=html",
   "--cov-report=term-missing",
   "-v"
]

testpaths = [
    "tests"
]
